# tinyquant-cli

./: .gitignore  README.md  pyproject.toml
src/tinyquant_cli/: cli.py
