[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyquant-cli"
version = "0.1.1"
description = "A simple hello world CLI tool"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "bitsandbytes>=0.49.1",
    "huggingface>=0.0.1",
    "huggingface-hub>=1.3.2",
    "safetensors>=0.7.0",
    "tinyquant",
    "tqdm>=4.67.1",
]

[project.scripts]
tinyquant-cli = "tinyquant_cli.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/tinyquant-cli"
Repository = "https://github.com/yourusername/tinyquant-cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
tinyquant = { git = "https://github.com/galqiwi/tinyquant.git" }
